--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body class="portfolio body">
 <header class="header">
-    <div class="container header-container">
+    <div class="container header-container header-container-port">
         <!--Navigation-->
 
         <a href="" class="header-logo"><span class="header-logo-web">Web</span>Studio</a>
@@ -35,20 +35,24 @@
 </header>
 <!--Main-->
     <main>
-      <section>
+      <section class="container">
+        <div class="port-con-main">
         <h1 class="title-none">Portfolio</h1>
-        <ul class="portfolio-list">
+        <ul class="portfolio-list port-con-btn">
             <li><button type="button" class="button-portfolio">Усі</button></li>
             <li><button type="button" class="button-portfolio">Веб-сайти</button></li>
             <li><button type="button" class="button-portfolio">Додатки</button></li>
             <li><button type="button" class="button-portfolio">Дизайн</button></li>
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
+
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
                 <img alt="" src="./img/partfolio-project1.jpg" winght="370">
+                  <div class="port-ul-text">
                 <h3 class="portfolio-list-title">Технокряк</h3>
                 <p class="portfolio-list-p">Веб-сайт</p>
+                  </div>
             </li>
             <li class="portfolio-list-li">
                 <img alt="" src="./img/partfolio-project2.jpg" winght="370">
@@ -91,19 +95,20 @@
                 <p class="portfolio-list-p">Додаток</p>
             </li>
         </ul>
-      </section>
+      </div>
+    </section>
     </main>
-<footer class="footer">
-    <a href="" class="footer-logo"><span class="header-logo-web">Web</span>Studio</a>
-    <address>
-        <ul class="footer-addres">
-            <li><a class="footer-addres-map"
-                    href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&rlz=1C1GCEA_enUA944UA944&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome..69i57j0i512j0i22i30l2.1827j0j7&sourceid=chrome&ie=UTF-8"
-                    rel="noreferrer noopener" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="footer-nav-contact">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a></li>
-        </ul>
-    </address>
-</footer>
+    <footer class="footer">
+        <div class="foot-con container">
+          <a href="" class="footer-logo"><span class="header-logo-web">Web</span>Studio</a>
+          <address class="footer-adres">
+          <ul class="footer-addres">
+              <li class="foot-con-li"><a class="footer-addres-map" href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&rlz=1C1GCEA_enUA944UA944&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome..69i57j0i512j0i22i30l2.1827j0j7&sourceid=chrome&ie=UTF-8" rel="noreferrer noopener"  target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
+              <li class="foot-con-li"><a href="mailto:info@devstudio.com" class="footer-nav-contact">info@devstudio.com</a></li>
+              <li class="foot-con-li"><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a></li>
+          </ul>
+          </address>
+        </div>
+      </footer>
 </body>
 </html>
