--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <li><button type="button" class="button-portfolio">Дизайн</button></li>
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
-
+<!----------list---------->
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
                 <article class="port-thumb">
@@ -93,7 +93,7 @@
                  </div>
                 </article>
             </li>
-            <li>
+            <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project6.jpg" winght="370">
                  <div class="port-list-text">
