--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +49,7 @@
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
 <!----------list---------->
+        <div class="container ">
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
                 <article class="port-thumb">
@@ -56,6 +60,7 @@
                   </div>
             </article>
             </li>
+
             <li class="portfolio-list-li">
                 <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project2.jpg" winght="370">
@@ -65,6 +70,7 @@
                 </div>
             </article>
             </li>
+
             <li class="portfolio-list-li">
                 <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project3.jpg" winght="370">
@@ -75,6 +81,7 @@
                  </div>
                 </article>
             </li>
+
             <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project4.jpg" winght="370">
@@ -84,6 +91,7 @@
                  </div>
                 </article>
             </li>
+
             <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project5.jpg" winght="370">
@@ -102,6 +110,7 @@
                  </div>
                 </article>
             </li>
+
             <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project7.jpg" winght="370">
@@ -111,6 +120,7 @@
                  </div>
                 </article>
             </li>
+            
             <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project8.jpg" winght="370">
@@ -119,6 +129,7 @@
                 <p class="portfolio-list-p">Маркетинг</p>
                  </div></article>
             </li>
+
             <li class="portfolio-list-li">
                  <article class="port-thumb">
                 <img alt="" src="./img/partfolio-project9.jpg" winght="370">
@@ -128,21 +139,28 @@
                  </div>
                  </article>
             </li>
+        
         </ul>
+       </div>
       </div>
     </section>
     </main>
-    <footer class="footer">
-        <div class="foot-con container">
-          <a href="" class="footer-logo"><span class="header-logo-web">Web</span>Studio</a>
-          <address class="footer-adres">
-          <ul class="footer-addres">
-              <li class="foot-con-li"><a class="footer-addres-map" href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&rlz=1C1GCEA_enUA944UA944&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome..69i57j0i512j0i22i30l2.1827j0j7&sourceid=chrome&ie=UTF-8" rel="noreferrer noopener"  target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
-              <li class="foot-con-li"><a href="mailto:info@devstudio.com" class="footer-nav-contact">info@devstudio.com</a></li>
-              <li class="foot-con-li"><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a></li>
-          </ul>
-          </address>
-        </div>
-      </footer>
+<!--Footer-->
+<footer class="footer footer-port">
+    <div class="foot-con container">
+        <a href="" class="footer-logo"><span class="header-logo-web">Web</span>Studio</a>
+        <address class="footer-adres">
+            <ul class="footer-addres">
+                <li class="foot-con-li"><a class="footer-addres-map"
+                        href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&rlz=1C1GCEA_enUA944UA944&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome..69i57j0i512j0i22i30l2.1827j0j7&sourceid=chrome&ie=UTF-8"
+                        rel="noreferrer noopener" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="foot-con-li"><a href="mailto:info@devstudio.com"
+                        class="footer-nav-contact">info@devstudio.com</a></li>
+                <li class="foot-con-li"><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
+</footer>
 </body>
 </html>
