--- a/portfolio.html
+++ b/portfolio.html
@@ -52,92 +52,74 @@
         <div class="container ">
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
-                <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project1.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project1.jpg" winght="370" class="port-list-img">
                   <div class="port-list-text">
                 <h3 class="portfolio-list-title">Технокряк</h3>
                 <p class="portfolio-list-p">Веб-сайт</p>
                   </div>
-            </article>
             </li>
 
             <li class="portfolio-list-li">
-                <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project2.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project2.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-list-p">Дизайн</p>
                 </div>
-            </article>
             </li>
 
             <li class="portfolio-list-li">
-                <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project3.jpg" winght="370">
-
+                <img alt="" src="./img/partfolio-project3.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Ресторан Seafood</h3>
                 <p class="portfolio-list-p">Додаток</p>
                  </div>
-                </article>
             </li>
 
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project4.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project4.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт Prime</h3>
                 <p class="portfolio-list-p">Маркетинг</p>
                  </div>
-                </article>
             </li>
 
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project5.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project5.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт Boxes</h3>
                 <p class="portfolio-list-p">Додаток</p>
                  </div>
-                </article>
             </li>
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project6.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project6.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Inspiration has no Borders</h3>
                 <p class="portfolio-list-p">Веб-сайт</p>
                  </div>
-                </article>
             </li>
 
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project7.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project7.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Видання Limited Edition</h3>
                 <p class="portfolio-list-p">Дизайн</p>
                  </div>
-                </article>
             </li>
             
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project8.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project8.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт LAB</h3>
                 <p class="portfolio-list-p">Маркетинг</p>
-                 </div></article>
+                 </div>
             </li>
 
             <li class="portfolio-list-li">
-                 <article class="port-thumb">
-                <img alt="" src="./img/partfolio-project9.jpg" winght="370">
+                <img alt="" src="./img/partfolio-project9.jpg" winght="370" class="port-list-img">
                  <div class="port-list-text"></div>
                 <h3 class="portfolio-list-title">Growing Business</h3>
                 <p class="portfolio-list-p">Додаток</p>
                  </div>
-                 </article>
             </li>
         
         </ul>
