--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
 <!----------list---------->
-        <div class="container ">
+        <div class="container">
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
                 <img alt="" src="./img/partfolio-project1.jpg" winght="370" class="port-list-img">
@@ -138,7 +138,7 @@
                         rel="noreferrer noopener" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li class="foot-con-li"><a href="mailto:info@devstudio.com"
                         class="footer-nav-contact">info@devstudio.com</a></li>
-                <li class="foot-con-li"><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a>
+                <li class="foot-con-li-tel"><a href="tel:+380961111111" class="footer-nav-contact">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
