--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <ul class="team-list team-con-ul">
           <li class="team-list-li">
              <div class="container  team-con"> 
-            <img src="./img/img.jpg" alt="" width="270">
+            <img src="./img/img.jpg" alt="" width="270" class="team-img">
               <div class="team-con-text">
             <h3 class="taem-list-title">Ігор Дем'яненко</h3>
             <p class="taem-list-p work-text">Product Designer</p>
