--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 </header>
 <!--Main-->
     <main>
-      <section class="container">
+      <section class="container section">
         <div class="port-con-main">
         <h1 class="title-none">Portfolio</h1>
         <ul class="portfolio-list port-con-btn">
@@ -49,7 +49,6 @@
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
 <!----------list---------->
-        <div class="container">
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
                 <img alt="" src="./img/partfolio-project1.jpg" winght="370" class="port-list-img">
@@ -123,7 +122,6 @@
             </li>
         
         </ul>
-       </div>
       </div>
     </section>
     </main>
