--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     <title>Document</title>
 </head>
 <body class="portfolio body">
-<header class="header">
-    <div class="container header-container header-container-port">
+<header class="header header-container-port">
+    <div class="container header-container">
         <!--Navigation-->
 
         <a href="" class="header-logo"><span class="header-logo-web">Web</span>Studio</a>
@@ -38,20 +38,22 @@
 </header>
 <!--Main-->
     <main>
-      <section class="container section">
-        <div class="port-con-main">
+      <section class="section">
+        <div class="container">
         <h1 class="title-none">Portfolio</h1>
-        <ul class="portfolio-list port-con-btn">
+        <ul class="port-con-btn">
             <li><button type="button" class="button-portfolio">Усі</button></li>
             <li><button type="button" class="button-portfolio">Веб-сайти</button></li>
             <li><button type="button" class="button-portfolio">Додатки</button></li>
             <li><button type="button" class="button-portfolio">Дизайн</button></li>
             <li><button type="button" class="button-portfolio">Маркетинг</button></li>
         </ul>
+        </div>
 <!----------list---------->
+        <div class="container-portfolio">
         <ul class="portfolio-list">
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project1.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project1.jpg" winght="370"  height="294px" class="port-list-img">
                   <div class="port-list-text">
                 <h3 class="portfolio-list-title">Технокряк</h3>
                 <p class="portfolio-list-p">Веб-сайт</p>
@@ -59,7 +61,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project2.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project2.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-list-p">Дизайн</p>
@@ -67,7 +69,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project3.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project3.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Ресторан Seafood</h3>
                 <p class="portfolio-list-p">Додаток</p>
@@ -75,7 +77,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project4.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project4.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт Prime</h3>
                 <p class="portfolio-list-p">Маркетинг</p>
@@ -83,14 +85,14 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project5.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project5.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт Boxes</h3>
                 <p class="portfolio-list-p">Додаток</p>
                  </div>
             </li>
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project6.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project6.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Inspiration has no Borders</h3>
                 <p class="portfolio-list-p">Веб-сайт</p>
@@ -98,7 +100,7 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project7.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project7.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Видання Limited Edition</h3>
                 <p class="portfolio-list-p">Дизайн</p>
@@ -106,7 +108,7 @@
             </li>
             
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project8.jpg" winght="370" class="port-list-img">
+                <img alt="" src="./img/partfolio-project8.jpg" winght="370" height="294px" class="port-list-img">
                  <div class="port-list-text">
                 <h3 class="portfolio-list-title">Проєкт LAB</h3>
                 <p class="portfolio-list-p">Маркетинг</p>
@@ -114,8 +116,8 @@
             </li>
 
             <li class="portfolio-list-li">
-                <img alt="" src="./img/partfolio-project9.jpg" winght="370" class="port-list-img">
-                 <div class="port-list-text"></div>
+                <img alt="" src="./img/partfolio-project9.jpg" winght="370" height="294px" class="port-list-img">
+                 <div class="port-list-text">
                 <h3 class="portfolio-list-title">Growing Business</h3>
                 <p class="portfolio-list-p">Додаток</p>
                  </div>
@@ -126,7 +128,7 @@
     </section>
     </main>
 <!--Footer-->
-<footer class="footer footer-port">
+<footer class="footer">
     <div class="foot-con container">
         <a href="" class="footer-logo"><span class="header-logo-web">Web</span>Studio</a>
         <address class="footer-adres">
